# webscraping-generator

./: .gitignore  README.md
handlebars/: .yo-rc.json  README.md  package.json  webpack.config.js
handlebars/src/: index.hbs  index.js  index.scss  template.html
users/: README.md  generate.py  pyproject.toml
